--- a/fe/package.json
+++ b/fe/package.json
@@ -12,11 +12,13 @@
   "dependencies": {
     "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.12.3",
     "@tanstack/react-virtual": "3.0.0-beta.53",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-query": "^3.39.3",
+    "react-router-dom": "^6.11.1",
     "rollup-plugin-node-polyfills": "^0.2.1"
   },
   "devDependencies": {
